fixed a minor alignment issue in the hero text

--- a/css/style.css
+++ b/css/style.css
@@ -74,11 +74,12 @@ body {
 .heading-primary-sub {
     font-size: 2rem;
     font-weight: 700;
-    letter-spacing: 1.74rem;
+    letter-spacing: 1.70rem;
 
     animation-name: moveInRight;
     animation-duration: 1s;
     animation-timing-function: ease-out;
+    margin-left: -1.2rem;
 }
 
 @keyframes moveInLeft {
